--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -27,10 +27,11 @@ body {
 }
 
 .button-container {
+    float: right;
     margin-top: 20px;
-    display: flex;
+   
     gap: 10px;
-    display: flex;
+    
 }
 
 .button-container x-button {
@@ -55,13 +56,13 @@ h1, h4 {
 }
 .info {
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 50%;
 background-color: #f9f9f9; /* Light background */
 border: 1px solid #ddd; /* Light border */
 border-radius: 5px; /* Rounded corners */
 padding: 15px; /* Spacing inside the div */
-margin: 10px 0; /* Spacing outside the div */
+margin: 5px 0; /* Spacing outside the div */
 font-family: Arial, sans-serif; /* Font style */
 color: #333; /* Text color */
 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
